--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-matplotlib==3.1.1
-numpy==1.17.4
-pandas==0.25.3
+
+numpy==1.21.0
+pandas==1.1.0
 scipy==1.4.1
-torch==1.2.0
+torch==1.12.1
 scikit_learn==0.23.1
+fastdtw==0.3.4
+tslearn==0.5.2
